[gd_scene load_steps=5 format=3 uid="uid://dy0q1jcldfc2u"]

[ext_resource type="Script" path="res://components/HeroesScreen/HeroesScreen.gd" id="1_n2tcv"]
[ext_resource type="PackedScene" uid="uid://ci3arpucf8bhi" path="res://components/HeroButton/HeroButton.tscn" id="2_ldtpp"]

[sub_resource type="Gradient" id="Gradient_ho6t5"]
colors = PackedColorArray(0.4, 0.4, 0.4, 1, 0.4, 0.4, 0.4, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_odenv"]
gradient = SubResource("Gradient_ho6t5")

[node name="Heroes" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_n2tcv")
heroButtonPackedScene = ExtResource("2_ldtpp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(30, 16.875)
texture = SubResource("GradientTexture2D_odenv")

[node name="obtained_heroesSprite" type="Control" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 984.0
offset_top = 577.0
offset_right = 984.0
offset_bottom = 577.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentHeroStatLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 69.0
offset_right = 220.0
offset_bottom = 92.0
text = "Current Hero stats"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 73.0
offset_right = 606.0
offset_bottom = 96.0
grow_horizontal = 2
text = "Name Lvl 1
"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ListOfHeroZone" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1860.0
offset_top = 87.0
offset_right = 1878.0
offset_bottom = 118.0
text = "X"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
